fix: change text alignment in body from center to left for better readability

--- a/css/styles.css
+++ b/css/styles.css
@@ -1072,7 +1072,7 @@ body {
     line-height: normal;
     letter-spacing: -1.8px;
     padding-bottom: 32px;
-    text-align: center;
+    text-align: left;
   }
 
   .faq_main {
